Augment switchyard with command response
